tree-sitter-styx/test/corpus/attributes.txt
================================================================================
Single attribute
================================================================================

key>value

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      (attributes
        (attribute
          key: (bare_scalar)
          value: (bare_scalar))))))

================================================================================
Multiple attributes
================================================================================

host>localhost port>8080

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      (attributes
        (attribute
          key: (bare_scalar)
          value: (bare_scalar))
        (attribute
          key: (bare_scalar)
          value: (bare_scalar))))))

================================================================================
Attribute with quoted value
================================================================================

message>"hello world"

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      (attributes
        (attribute
          key: (bare_scalar)
          value: (quoted_scalar))))))

================================================================================
Attribute with object value
================================================================================

config>{host localhost, port 8080}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      (attributes
        (attribute
          key: (bare_scalar)
          value: (object
            (entry
              key: (expr
                payload: (scalar
                  (bare_scalar)))
              value: (expr
                payload: (scalar
                  (bare_scalar))))
            (entry
              key: (expr
                payload: (scalar
                  (bare_scalar)))
              value: (expr
                payload: (scalar
                  (bare_scalar))))))))))

================================================================================
Attribute with sequence value
================================================================================

ports>(80 443 8080)

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      (attributes
        (attribute
          key: (bare_scalar)
          value: (sequence
            (expr
              payload: (scalar
                (bare_scalar)))
            (expr
              payload: (scalar
                (bare_scalar)))
            (expr
              payload: (scalar
                (bare_scalar)))))))))

================================================================================
URL with query string (not attributes)
================================================================================

https://foo.org?a=b&c=d

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))
