tree-sitter-styx/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

// this is a comment
hello

--------------------------------------------------------------------------------

(document
  (line_comment)
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))

================================================================================
Comment after entry
================================================================================

hello // inline comment

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar))))
  (line_comment))

================================================================================
Doc comment
================================================================================

/// This documents the entry
hello

--------------------------------------------------------------------------------

(document
  (doc_comment)
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))

================================================================================
Multi-line doc comment
================================================================================

/// Line one
/// Line two
/// Line three
value

--------------------------------------------------------------------------------

(document
  (doc_comment)
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))
