tree-sitter-styx/test/corpus/entries.txt
================================================================================
Single atom entry (implicit unit value)
================================================================================

{
    enabled
}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (object
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar))))))))

================================================================================
Two atom entry (key value)
================================================================================

{
    host localhost
}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (object
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar)))
          value: (expr
            payload: (scalar
              (bare_scalar))))))))

================================================================================
Three atom entry (nested key path)
================================================================================

{
    server host localhost
}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (object
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar)))
          key: (expr
            payload: (scalar
              (bare_scalar)))
          value: (expr
            payload: (scalar
              (bare_scalar))))))))

================================================================================
Entry with tag as value
================================================================================

{
    status @ok
}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (object
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar)))
          value: (expr
            tag: (tag)))))))

================================================================================
Entry with unit as explicit value
================================================================================

{
    optional @
}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (object
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar)))
          value: (expr
            payload: (unit)))))))

================================================================================
Top-level entries (implicit root object)
================================================================================

host localhost
port 8080

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))
    value: (expr
      payload: (scalar
        (bare_scalar))))
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))
    value: (expr
      payload: (scalar
        (bare_scalar)))))
