tree-sitter-styx/test/corpus/heredocs.txt
================================================================================
Simple heredoc
================================================================================

<<TEXT
hello world
TEXT

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (scalar
        (heredoc
          (heredoc_content))))))

================================================================================
Multi-line heredoc
================================================================================

<<SCRIPT
line one
line two
line three
SCRIPT

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (scalar
        (heredoc
          (heredoc_content))))))

================================================================================
Heredoc with delimiter in content
================================================================================

<<EOF
This line contains EOF but not at start
Still content
EOF

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (scalar
        (heredoc
          (heredoc_content))))))

================================================================================
Heredoc with language hint
================================================================================

<<CODE,rust
fn main() {
    println!("Hello");
}
CODE

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (scalar
        (heredoc
          (heredoc_lang)
          (heredoc_content))))))

================================================================================
Heredoc with language hint containing dots
================================================================================

<<QUERY,application.graphql
query { users { id } }
QUERY

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (scalar
        (heredoc
          (heredoc_lang)
          (heredoc_content))))))
