tree-sitter-styx/test/corpus/objects.txt
================================================================================
Empty object
================================================================================

{}

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (object))))

================================================================================
Object with single entry
================================================================================

{
    key value
}

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (object
        (entry
          (atom
            (scalar
              (bare_scalar)))
          (atom
            (scalar
              (bare_scalar))))))))

================================================================================
Object with multiple entries newline separated
================================================================================

{
    host localhost
    port 8080
}

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (object
        (entry
          (atom
            (scalar
              (bare_scalar)))
          (atom
            (scalar
              (bare_scalar))))
        (entry
          (atom
            (scalar
              (bare_scalar)))
          (atom
            (scalar
              (bare_scalar))))))))

================================================================================
Object with comma separated entries
================================================================================

{host localhost, port 8080}

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (object
        (entry
          (atom
            (scalar
              (bare_scalar)))
          (atom
            (scalar
              (bare_scalar))))
        (entry
          (atom
            (scalar
              (bare_scalar)))
          (atom
            (scalar
              (bare_scalar))))))))

================================================================================
Nested objects
================================================================================

{
    server {
        host localhost
        port 8080
    }
}

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (object
        (entry
          (atom
            (scalar
              (bare_scalar)))
          (atom
            (object
              (entry
                (atom
                  (scalar
                    (bare_scalar)))
                (atom
                  (scalar
                    (bare_scalar))))
              (entry
                (atom
                  (scalar
                    (bare_scalar)))
                (atom
                  (scalar
                    (bare_scalar)))))))))))

================================================================================
Object with implicit unit value
================================================================================

{
    enabled
    debug
}

--------------------------------------------------------------------------------

(document
  (entry
    (atom
      (object
        (entry
          (atom
            (scalar
              (bare_scalar))))
        (entry
          (atom
            (scalar
              (bare_scalar))))))))
