tree-sitter-styx/test/corpus/scalars.txt
================================================================================
Bare scalar
================================================================================

hello

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))

================================================================================
Bare scalar with URL
================================================================================

https://example.com/path

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))

================================================================================
Bare scalar with @ in middle
================================================================================

crate:myapp@2

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))

================================================================================
Bare scalar email
================================================================================

user@example.com

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (bare_scalar)))))

================================================================================
Quoted scalar simple
================================================================================

"hello world"

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (quoted_scalar)))))

================================================================================
Quoted scalar with escapes
================================================================================

"hello\nworld\t\"quoted\""

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (quoted_scalar
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence))))))

================================================================================
Quoted scalar with unicode escapes
================================================================================

"\u0041\u{1F600}"

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (quoted_scalar
          (escape_sequence)
          (escape_sequence))))))

================================================================================
Raw scalar no hashes
================================================================================

r"hello world"

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (raw_scalar)))))

================================================================================
Raw scalar with hashes
================================================================================

r#"hello "world""#

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (raw_scalar)))))

================================================================================
Raw scalar with multiple hashes
================================================================================

r##"contains "# but not ##"##

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (scalar
        (raw_scalar)))))
