tree-sitter-styx/test/corpus/tags.txt
================================================================================
Unit value
================================================================================

@

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      payload: (unit))))

================================================================================
Simple tag (unit variant)
================================================================================

@ok

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      tag: (tag))))

================================================================================
Tag with explicit unit payload
================================================================================

@none@

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      tag: (tag)
      payload: (unit))))

================================================================================
Tag with quoted scalar payload
================================================================================

@error"something went wrong"

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      tag: (tag)
      payload: (scalar
        (quoted_scalar)))))

================================================================================
Tag with object payload
================================================================================

@error{code 500, message "oops"}

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      tag: (tag)
      payload: (object
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar)))
          value: (expr
            payload: (scalar
              (bare_scalar))))
        (entry
          key: (expr
            payload: (scalar
              (bare_scalar)))
          value: (expr
            payload: (scalar
              (quoted_scalar))))))))

================================================================================
Tag with sequence payload
================================================================================

@point(10 20 30)

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      tag: (tag)
      payload: (sequence
        (expr
          payload: (scalar
            (bare_scalar)))
        (expr
          payload: (scalar
            (bare_scalar)))
        (expr
          payload: (scalar
            (bare_scalar)))))))

================================================================================
Tag with dots and dashes in name
================================================================================

@my-custom.tag

--------------------------------------------------------------------------------

(document
  (entry
    key: (expr
      tag: (tag))))
